test/testdata/nil/not_indexable_error.lox
nil[0]; // error: 'nil' value is not indexable
